Migrate new Locale constructor invocations to Locale.of calls